--- a/examples/development/Cargo.toml
+++ b/examples/development/Cargo.toml
@@ -15,11 +15,13 @@ publish = false
 console_error_panic_hook = "0.1.6"
 dominator = "0.5.18"
 wasm-bindgen = "0.2.74"
+wasm-bindgen-futures = "0.4"
 futures = "0.3.15"
 futures-signals = "0.3.20"
 gloo-timers = { version = "0.2.1", features = ["futures"] }
 once_cell = "1.7.2"
 
+
 [dependencies.web-sys]
 version = "0.3.51"
-features = ["console"]
+features = ["console", "AbortController", "AbortSignal", "Headers", "RequestInit", "Response"]
