--- a/examples/development/Cargo.toml
+++ b/examples/development/Cargo.toml
@@ -21,7 +21,10 @@ futures-signals = "0.3.20"
 gloo-timers = { version = "0.2.1", features = ["futures"] }
 once_cell = "1.7.2"
 
-
 [dependencies.web-sys]
 version = "0.3.51"
-features = ["console", "AbortController", "AbortSignal", "Headers", "RequestInit", "Response"]
+features = ["console", "AbortController", "AbortSignal", "Headers", "RequestInit", "Response", "Performance", 
+    "IntersectionObserver",
+    "IntersectionObserverEntry",
+    "IntersectionObserverInit",
+]
